[gd_scene load_steps=3 format=3 uid="uid://d20itb73p7fmt"]

[ext_resource type="Script" path="res://scripts/global/Audio.gd" id="1_f1w12"]
[ext_resource type="AudioStream" uid="uid://chsan1o1ku2c7" path="res://sound/music/abstract-world-127012.mp3" id="2_5ag8m"]

[node name="Audio" type="Node"]
script = ExtResource("1_f1w12")

[node name="AudioStream_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5ag8m")
volume_db = -4.0
autoplay = true
bus = &"Music"

[node name="enemy_sounds" type="Node" parent="."]

[node name="enemySound1" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound2" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound3" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound4" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound5" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound6" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound7" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound8" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound9" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound10" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound11" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound12" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound13" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound14" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound15" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound16" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound17" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound18" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound19" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound20" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound21" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound22" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound23" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[node name="enemySound24" type="AudioStreamPlayer" parent="enemy_sounds"]
volume_db = 3.0
bus = &"FX"

[connection signal="finished" from="AudioStream_Music" to="." method="_on_audio_stream_music_finished"]
